# google-glog

./: CMakeLists.txt  README.md
src/: logging.cc
src/windows/: port.h
